--- a/src/components/utils/UI/footer/footer.scss
+++ b/src/components/utils/UI/footer/footer.scss
@@ -1,13 +1,13 @@
 .footer {
-    height: 5em;
-    padding: 2%;
-    background-color: #292929;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+	height: 8em;
+	padding: 2%;
+	background-color: #292929;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
 
-    h4 {
-        font-size: 2em;
-    }
+	h4 {
+		font-size: 2em;
+	}
 }
